Adicionando títulos para uma melhor leitura das informações exibidas

--- a/Unidade 2/Trabalho2/Analises/graficosComparacoes.ipynb
+++ b/Unidade 2/Trabalho2/Analises/graficosComparacoes.ipynb
@@ -12,6 +12,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f96e74dc",
+   "metadata": {},
+   "source": [
+    "### Tabela de dados base"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "a30bb93b",
@@ -204,8 +212,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e25e4fb6",
+   "metadata": {},
+   "source": [
+    "#### Quantidade de comparações realizadas pelos algoritmos de ordenação em diferentes tamanhos de entrada"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "274b5e70",
    "metadata": {},
    "outputs": [
@@ -234,6 +250,14 @@
     "sns.lineplot(x = \"Tamanho\", y = \"comparações\",\n",
     "             hue = \"Algoritmo\", style = \"Distribuição\",\n",
     "             data = df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de10b4fa",
+   "metadata": {},
+   "source": [
+    "#### Quantidade de comparações feitas apenas pelo Bubble Sort"
    ]
   },
   {
@@ -280,6 +304,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a6057be7",
+   "metadata": {},
+   "source": [
+    "#### Quantidade de comparações feitas apenas pelo Selection Sort"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "id": "a7f2374e",
@@ -323,6 +355,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d52f358b",
+   "metadata": {},
+   "source": [
+    "#### Quantidade de comparações feitas apenas pelo Insertion Sort"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "3c30199c",
@@ -363,6 +403,14 @@
     "sns.lineplot(x = \"Tamanho\", y = \"comparações\",\n",
     "             hue = \"Algoritmo\", style = \"Distribuição\",\n",
     "             data = df_Insertion)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "584e4ee7",
+   "metadata": {},
+   "source": [
+    "#### Quantidade de comparações feitas pelo Quick Sort e Merge Sort"
    ]
   },
   {
