--- a/Unidade 2/Trabalho2/Analises/graficosTempo.ipynb
+++ b/Unidade 2/Trabalho2/Analises/graficosTempo.ipynb
@@ -51,6 +51,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "44fa4eec",
+   "metadata": {},
+   "source": [
+    "### Tabela de dados base"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "35adb0c6",
@@ -254,6 +262,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c9b8e373",
+   "metadata": {},
+   "source": [
+    "#### Tempo de execução dos algoritmos de ordenação em diferentes tamanhos de entrada"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "54c49748",
@@ -284,6 +300,14 @@
     "sns.lineplot(x = \"Tamanho\", y = \"tempo\",\n",
     "             hue = \"Algoritmo\", style = \"Distribuição\",\n",
     "             data = df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c24f9267",
+   "metadata": {},
+   "source": [
+    "#### Tempo de execução dos algoritmos de ordenação (sem o Bubble Sort)"
    ]
   },
   {
@@ -330,6 +354,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "934c198f",
+   "metadata": {},
+   "source": [
+    "#### Algoritmos de ordenação que tiveram melhor desempenho de tempo (Incluindo o STL)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "id": "a72c62a7",
@@ -371,14 +403,6 @@
     "             hue = \"Algoritmo\", style = \"Distribuição\",\n",
     "             data = df_nLogn)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4406aa75",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
