--- a/Unidade 2/Trabalho2/Analises/graficosTrocas.ipynb
+++ b/Unidade 2/Trabalho2/Analises/graficosTrocas.ipynb
@@ -12,6 +12,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3f96ae84",
+   "metadata": {},
+   "source": [
+    "### Tabela de dados base"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "a272cb8a",
@@ -204,6 +212,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1c9b941c",
+   "metadata": {},
+   "source": [
+    "#### Quantidade de trocas realizadas pelos algoritmos de ordenação em diferentes tamanhos de entrada"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "8b4a22a4",
@@ -234,6 +250,14 @@
     "sns.lineplot(x = \"Tamanho\", y = \"trocas\",\n",
     "             hue = \"Algoritmo\", style = \"Distribuição\",\n",
     "             data = df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d228ee75",
+   "metadata": {},
+   "source": [
+    "#### Quantidade de trocas realizadas pelos algoritmos de ordenação (sem o Bubble Sort)"
    ]
   },
   {
@@ -277,6 +301,14 @@
     "sns.lineplot(x = \"Tamanho\", y = \"trocas\",\n",
     "             hue = \"Algoritmo\", style = \"Distribuição\",\n",
     "             data = df_sem_Bubble)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f31bb1cd",
+   "metadata": {},
+   "source": [
+    "#### Algoritmos de ordenação que obtiveram a menor quantidade de trocas realizadas"
    ]
   },
   {
