--- a/Unidade 2/Trabalho2/Analises/graficoLogaritmico.ipynb
+++ b/Unidade 2/Trabalho2/Analises/graficoLogaritmico.ipynb
@@ -13,8 +13,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1fa05267",
+   "metadata": {},
+   "source": [
+    "### Tabela de dados base"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "20ab99cb",
    "metadata": {},
    "outputs": [
@@ -194,7 +202,7 @@
        "[198 rows x 7 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,6 +210,14 @@
    "source": [
     "df = pd.read_csv(\"Tabela.csv\")\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "018ed670",
+   "metadata": {},
+   "source": [
+    "#### Tempo de execução dos algoritmos de ordenação em diferentes tamanhos de entrada"
    ]
   },
   {
