--- a/Unidade 2/Trabalho2/Analises/tabelas.ipynb
+++ b/Unidade 2/Trabalho2/Analises/tabelas.ipynb
@@ -120,6 +120,86 @@
    "source": [
     "df.to_csv(\"Tabela.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "e82515be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"Tabela.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "5c1b1c88",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_1000 = df[df[\"Tamanho\"] == 1000]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "26c015e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_1000[[\"Algoritmo\", \"Tamanho\", \"Distribuição\", \"tempo\", \"comparações\", \"trocas\"]].to_excel(\"Tabela1000.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9f854376",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_50000 = df[df[\"Tamanho\"] == 50000]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "abbe7b80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_50000[[\"Algoritmo\", \"Tamanho\", \"Distribuição\", \"tempo\", \"comparações\", \"trocas\"]].to_excel(\"Tabela50000.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "8693a7b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_100000 = df[df[\"Tamanho\"] == 100000]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "829ff7c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_100000[[\"Algoritmo\", \"Tamanho\", \"Distribuição\", \"tempo\", \"comparações\", \"trocas\"]].to_excel(\"Tabela100000.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "68404ba5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[(df[\"Tamanho\"] == 100000) & (df[\"Distribuição\"] == \"inversamente_ordenados\")].sort_values(\"tempo\")[[\"Algoritmo\", \"tempo\"]].to_excel(\"Ranking.xlsx\")"
+   ]
   }
  ],
  "metadata": {
