Colocando as tabelas em extensão .csv para melhor visualizá-las via plataforma do github

--- a/Unidade 2/Trabalho2/Analises/tabelas.ipynb
+++ b/Unidade 2/Trabalho2/Analises/tabelas.ipynb
@@ -143,12 +143,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "id": "26c015e9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_1000[[\"Algoritmo\", \"Tamanho\", \"Distribuição\", \"tempo\", \"comparações\", \"trocas\"]].to_excel(\"Tabela1000.xlsx\")"
+    "df_1000[[\"Algoritmo\", \"Tamanho\", \"Distribuição\", \"tempo\", \"comparações\", \"trocas\"]].to_csv(\"Tabela1000.csv\")"
    ]
   },
   {
@@ -163,12 +163,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "id": "abbe7b80",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_50000[[\"Algoritmo\", \"Tamanho\", \"Distribuição\", \"tempo\", \"comparações\", \"trocas\"]].to_excel(\"Tabela50000.xlsx\")"
+    "df_50000[[\"Algoritmo\", \"Tamanho\", \"Distribuição\", \"tempo\", \"comparações\", \"trocas\"]].to_csv(\"Tabela50000.csv\")"
    ]
   },
   {
@@ -183,22 +183,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "id": "829ff7c1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_100000[[\"Algoritmo\", \"Tamanho\", \"Distribuição\", \"tempo\", \"comparações\", \"trocas\"]].to_excel(\"Tabela100000.xlsx\")"
+    "df_100000[[\"Algoritmo\", \"Tamanho\", \"Distribuição\", \"tempo\", \"comparações\", \"trocas\"]].to_csv(\"Tabela100000.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "id": "68404ba5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[(df[\"Tamanho\"] == 100000) & (df[\"Distribuição\"] == \"inversamente_ordenados\")].sort_values(\"tempo\")[[\"Algoritmo\", \"tempo\"]].to_excel(\"Ranking.xlsx\")"
+    "df[(df[\"Tamanho\"] == 100000) & (df[\"Distribuição\"] == \"inversamente_ordenados\")].sort_values(\"tempo\")[[\"Algoritmo\", \"tempo\"]].to_csv(\"Ranking.csv\")"
    ]
   }
  ],
